--- a/hzg.csproj
+++ b/hzg.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Minio" Version="4.0.6" />
     <PackageReference Include="MQTTnet" Version="4.1.1.318" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.48" />
