--- a/hzg.csproj
+++ b/hzg.csproj
@@ -4,11 +4,14 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <!-- <Nullable>enable</Nullable> -->
+    <PackageId>Hzg.Tools</PackageId>
+    <Version>1.0.1</Version>
+    <Authors>ZhengGuo Huang</Authors>
+    <Company>HZG</Company>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AlibabaCloud.OpenApiClient" Version="0.1.4" />
-    <PackageReference Include="AlibabaCloud.SDK.Iot20180120" Version="3.0.9" />
     <PackageReference Include="MailKit" Version="3.5.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.3">
